--- a/app/src/main/res/layout/list_item_exam.xml
+++ b/app/src/main/res/layout/list_item_exam.xml
@@ -98,12 +98,22 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.2">
+                android:orientation="vertical"
+                android:layout_weight="0.2"
+                >
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chevron_right_16dp_primary" />
+                    android:src="@drawable/ic_chevron_right_16dp_primary"
+                    />
+
+                <ImageView
+                    android:id="@+id/emergencyIcon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_warning_24dp"
+                    android:layout_marginTop="52dp"/>
             </LinearLayout>
 
         </LinearLayout>
