--- a/app/src/main/res/layout/activity_anonymous_information.xml
+++ b/app/src/main/res/layout/activity_anonymous_information.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
     android:gravity="top">
-
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/gs_anon_exam_coordinator_lay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -243,4 +246,5 @@
 
         </LinearLayout>
     </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
