--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -305,7 +305,7 @@
                     android:drawablePadding="4dp"
                     android:padding="5dp"
                     android:text="@string/download_documents"
-
+                    android:textSize="13sp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/colorError300" />
 
@@ -317,12 +317,12 @@
                     android:layout_height="40dp"
                     android:layout_alignParentTop="true"
                     android:layout_gravity="end"
-                    android:layout_marginRight="6dp"
                     android:layout_toStartOf="@+id/images_btn"
                     android:background="@android:color/transparent"
                     android:drawableRight="@drawable/ic_expand_more_24dp_primary"
                     android:text="@string/comments"
                     android:textAlignment="textEnd"
+                    android:textSize="13sp"
                     android:textColor="@color/colorPrimary" />
 
                 <Button
@@ -337,6 +337,7 @@
                     android:drawableRight="@drawable/ic_chevron_right_24dp_primary"
                     android:text="@string/Images"
                     android:textAlignment="textEnd"
+                    android:textSize="13sp"
                     android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
