--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/btn_anonymous_exam"
+                    android:id="@+id/gs_login_btn_anonymous_exam"
                     style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -97,7 +97,7 @@
                     android:text="@string/anonymous_exam"
                     android:textAppearance="@android:style/TextAppearance.Material.Widget.DropDownHint"
                     android:textColor="@color/colorPrimary300"
-                    android:textSize="10dp"
+                    android:textSize="12sp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true"
                     android:paddingLeft="6dp"
@@ -106,7 +106,7 @@
                     android:paddingBottom="0dp" />
 
                 <Button
-                    android:id="@+id/btn_forgot_pwd"
+                    android:id="@+id/gs_login_btn_forgot_password"
                     style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
                     android:text="@string/forgot_pwd"
                     android:textAppearance="@android:style/TextAppearance.Material.Widget.DropDownHint"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="10dp"
+                    android:textSize="12sp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true" />
 
