--- a/app/src/main/res/layout/fragment_examoverview.xml
+++ b/app/src/main/res/layout/fragment_examoverview.xml
@@ -17,7 +17,7 @@
        />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/gs_exam_images_progress_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
