--- a/app/src/main/res/layout/fragment_fullscreenimage.xml
+++ b/app/src/main/res/layout/fragment_fullscreenimage.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/gs_maintab_activity_pager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
