--- a/app/src/main/res/layout/list_item_exam.xml
+++ b/app/src/main/res/layout/list_item_exam.xml
@@ -101,8 +101,10 @@
                 android:layout_weight="0.2">
 
                 <ImageView
+                    android:id="@+id/image_chevron_right"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/check_id_for_description"
                     android:src="@drawable/ic_chevron_right_16dp_primary" />
             </LinearLayout>
 
