--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,7 +23,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
@@ -268,7 +268,7 @@
                         android:hint="@string/language"
                         android:imeOptions="actionNext"
                         android:inputType="textAutoComplete"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -290,7 +290,7 @@
                         android:hint="@string/id_type"
                         android:imeOptions="actionNext"
                         android:inputType="textAutoComplete"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -311,12 +311,13 @@
                         android:hint="@string/personal_id"
                         android:imeOptions="actionDone"
                         android:inputType="textNoSuggestions"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
 
                 <LinearLayout
+                    android:baselineAligned="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
