--- a/app/src/main/res/layout/fullscreen_image.xml
+++ b/app/src/main/res/layout/fullscreen_image.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:contentDescription="@string/check_id_for_description"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
