--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/comment_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
 
         android:text="@string/username"
-        android:textSize="10dp" />
+        android:textSize="11sp"
+        tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/gs_exam_comment_time_posted"
@@ -30,7 +32,8 @@
         android:layout_alignBottom="@+id/gs_exam_comment_username"
         android:layout_alignParentEnd="true"
         android:textStyle="italic"
-        android:textSize="10dp" />
+        android:textSize="11sp"
+        tools:ignore="SmallSp" />
     </RelativeLayout>
     <TextView
         android:id="@+id/gs_exam_comment_text"
@@ -43,7 +46,7 @@
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
         android:paddingRight="10dp"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:textAppearance="@android:style/TextAppearance.Material.Body1" />
 
 </RelativeLayout>
