--- a/app/src/main/res/layout/spinner_city_row.xml
+++ b/app/src/main/res/layout/spinner_city_row.xml
@@ -6,5 +6,5 @@
     android:background="@android:color/white"
     android:padding="6dp"
     android:textColor="@color/colorTextColor"
-    android:textSize="14dp" />
+    android:textSize="14sp" />
 
