--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -289,7 +289,7 @@
                         android:drawablePadding="4dp"
                         android:hint="@string/id_type"
                         android:imeOptions="actionNext"
-                        android:inputType="textAutoComplete"
+                        android:inputType="number"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
