--- a/app/src/main/res/layout/dialog_sort_exams.xml
+++ b/app/src/main/res/layout/dialog_sort_exams.xml
@@ -5,6 +5,15 @@
     android:elevation="2dp"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/colorWhite"
+        android:padding="12dp"
+        android:textSize="21sp"
+        android:text="@string/sortexams"/>
+
     <LinearLayout
         android:id="@+id/patient_button_layout"
         android:layout_width="match_parent"
