--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -11,7 +11,8 @@
         android:id="@+id/gs_exam_images_error_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_marginTop="80dp"
+        android:padding="12dp"
         android:drawablePadding="12dp"
         android:drawableStart="@drawable/ic_error_36dp_error"
         android:gravity="center_vertical"
